DATABASE: Add database schema

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=
+DATABASE_URL="postgres://neondb_owner:npg_D83YmhpUHbdR@ep-icy-wildflower-a1muoqdb-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
 
 R2_CLIENT_ID=
 R2_CLIENT_SECRET=
