--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@prisma/client": "^6.4.1",
     "arctic": "^3.4.0",
     "framer-motion": "^12.4.7",
+    "html-to-image": "^1.11.13",
+    "lucide-react": "^0.477.0",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
