bugfix: fix edit receipt

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,10 @@ R2_CLIENT_ID=
 R2_CLIENT_SECRET=
 R2_S3_ENDPOINT=
 R2_DEV_URL=
+R2_BUCKET_NAME=
 
-GOOGLE_CLIENT_ID=
+LLAMAPARSE_API_KEY=
+
+GOOGLE_CLIENT_ID =
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=
