--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "form-data": "^4.0.2",
     "framer-motion": "^12.4.7",
     "html-to-image": "^1.11.13",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.477.0",
     "moment": "^2.30.1",
     "next": "15.1.7",
