--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^6.4.1",
     "arctic": "^3.5.0",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "form-data": "^4.0.2",
     "framer-motion": "^12.4.7",
     "html-to-image": "^1.11.13",
