chore: remove value

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgres://neondb_owner:npg_D83YmhpUHbdR@ep-icy-wildflower-a1muoqdb-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require"
+DATABASE_URL=
 
 R2_CLIENT_ID=
 R2_CLIENT_SECRET=
@@ -8,6 +8,6 @@ R2_BUCKET_NAME=
 
 LLAMAPARSE_API_KEY=
 
-GOOGLE_CLIENT_ID =
+GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REDIRECT_URI=
